tests/ui/direct_configuration-f-2.stderr
error[E0277]: the trait bound `EnvConfig: Default` is not satisfied
  --> $DIR/direct_configuration-f-2.rs:16:17
   |
16 |     let conf1 = <EnvConfig as EasyConfiguration>::load().await.unwrap();
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `EnvConfig`
   |
   = note: required because of the requirements on the impl of `EasyConfiguration` for `EnvConfig`

error[E0277]: the trait bound `EnvConfig: Default` is not satisfied
  --> $DIR/direct_configuration-f-2.rs:16:17
   |
16 |     let conf1 = <EnvConfig as EasyConfiguration>::load().await.unwrap();
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `EnvConfig`
   |
  ::: $WORKSPACE/src/configuration.rs
   |
   |     async fn load() -> Result<Self::Inner, Self::Error>;
   |              ---- required by this bound in `blockz::configuration::EasyConfiguration::load`
   |
   = note: required because of the requirements on the impl of `EasyConfiguration` for `EnvConfig`
